force-app/main/default/objects/Staff_Rating__c/Staff_Rating__c.object-meta.xml
<CustomObject>
    <label>Staff Rating</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Staff Rating</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Rating</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>