force-app/main/default/objects/Staff_Rating__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Staff Rating</relationshipLabel>
    <relationshipName>Staff_Rating</relationshipName>
    <type>Lookup</type>
</CustomField>