force-app/main/default/objects/Staff_Rating__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staff Rating</relationshipLabel>
    <relationshipName>Staff_Rating</relationshipName>
    <type>Lookup</type>
</CustomField>