force-app/main/default/objects/Staff_Rating__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Staff Rating</relationshipLabel>
    <relationshipName>Staff_Rating</relationshipName>
    <type>Lookup</type>
</CustomField>