force-app/main/default/objects/Staff_Rating__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Staff__c</columns>
    <columns>Booking__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>